feat(KSTIP-1987): make sonarqube happy